<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_explore"
        android:title="@string/main_nav_explore" />
    <item
        android:id="@+id/communityFragment"
        android:icon="@drawable/ic_groups"
        android:title="@string/main_nav_community" />
    <item
        android:id="@+id/placeholder"
        android:title=""
        android:enabled="false"/>
    <item
        android:id="@+id/myRoutesFragment"
        android:icon="@drawable/ic_alt_route"
        android:title="@string/main_nav_my_routes" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_person"
        android:title="@string/main_nav_profile" />
</menu>